adds main section

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-	<title>Siseko Nomavila | Software Engineer</title>
+    <title>Siseko Nomavila | Software Engineer</title>
+    <meta
+      name="description"
+      content="Full Stack Software Engineer | React | Angular | Svelte | Java | Node.js | NestJS"
+    />
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="stylesheet" href="/build/bundle.css" />
 
-	<script defer src='/build/bundle.js'></script>
-</head>
+    <meta property="og:title" content="Siseko Nomavila | Software Engineer" />
+    <meta property="og:url" content="https://siseko.me/" />
+    <meta
+      property="og:description"
+      content="Full Stack Software Engineer | React | Angular | Svelte | Java | Node.js | NestJS"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/vw/image/upload/v1599915557/siseko/dc138e8a-dc25-4805-9d5e-3f947f5043c0.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_ZA" />
 
-<body>
-</body>
+    <script defer src="/build/bundle.js"></script>
+  </head>
+
+  <body></body>
 </html>
